--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="Lajos Djerfi" />
-    <title>New Age - Start Bootstrap Theme</title>
+    <title>Pet Health Care</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet" />
@@ -431,7 +431,7 @@
     <footer class="bg-black text-center py-5">
         <div class="container px-5">
             <div class="text-white-50 small">
-                <div class="mb-2">&copy; Your Website 2024. All Rights Reserved.</div>
+                <div class="mb-2">&copy; Pet Health Care 2024. All Rights Reserved.</div>
                 <a href="#!"><i class="bi bi-facebook"></i></a>
                 <span class="mx-1">&middot;</span>
                 <a href="#!"><i class="bi bi-instagram"></i></a>
